
- #12234: make instrumented time calculation more thread-safe on macOS.
  (Anil Madhavapeddy, review by Daniel Bünzli and Xavier Leroy)

- #12275: caml/stack.h: more abstract macros to describe OCaml stacks and
  how to traverse them, supporting more stack layouts.
  (Xavier Leroy, review by KC Sivaramakrishnan and Fabrice Buoro)

### Code generation and optimizations:

### Standard library:

- #12217: Add `Array.shuffle`.
  (Daniel Bünzli, review by Nicolás Ojeda Bär, David Allsopp and Alain Frisch)

### Other libraries:

- #12213: Dynlink library, improve legibility of error messages
  (Samuel Hym, review by Gabriel Scherer and Nicolás Ojeda Bär)

### Tools:

- #12147: ocamllex: Allow carriage returns at the end of line directives.
  (SeungCheol Jung, review by Nicolás Ojeda Bär)

- #12260: Fix invalid_argument on some external or module aliases in ocamlnat
  (Fabian Hemmer, review by Vincent Laviron)

- #12185: New script language for ocamltest.
  (Damien Doligez with Florian Angeletti, Sébastien Hinderer, Gabriel Scherer,
   review by Sébastien Hinderer and Gabriel Scherer)

### Manual and documentation:

### Compiler user-interface and warnings:

- #12247: configure: --disable-ocamldebug can now be used instead
  of --disable-debugger (which remains available for compatibility)
  (Gabriel Scherer, review by Damien Doligez and Sébastien Hinderer)

### Internal/compiler-libs changes:

- #12216, #12248: Prevent reordering of atomic loads during instruction
  scheduling.  This is for reference, as instruction scheduling is currently
  unused in OCaml 5.
  (Xavier Leroy, report by Luc Maranget and KC Sivaramakrishnan,
   review by Nicolás Ojeda Bär)

- #12025: Split Typecore.unify_pat_types into two
  to avoid unnecessary references to the environment in type_pat
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #12031: Use dedicated types to represent names of compilation units
  and predefined exceptions in CMO files.